--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,10 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+// Font Awesome
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+
+// Admin LTE
+@import "node_modules/admin-lte/dist/css/AdminLTE.min";
+@import "node_modules/admin-lte/dist/css/skins/skin-blue.min";
