--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,3 +14,6 @@
 // Admin LTE
 @import "node_modules/admin-lte/dist/css/AdminLTE.min";
 @import "node_modules/admin-lte/dist/css/skins/skin-blue.min";
+
+// Custom
+@import "custom";
